Add content to index.html, script.js, and style.css

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             <!-- Matches will be displayed here -->
         </div>
     </div>
+    <button id="submit-btn">Submit</button>
+    <div id="result"></div>
     <script src="script.js"></script>
 </body>
 </html>
