Add content to index.html, script.js, and style.css

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         </div>
     </div>
     <button id="submit-btn">Submit</button>
+    <button id="reset-btn">Reset</button>
     <div id="result"></div>
     <script src="script.js"></script>
 </body>
